force-app/main/default/objects/AV_Simulador__c/AV_Simulador__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para parametrizar los simuladores</description>
    <label>Simulador</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simuladores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>