force-app/main/default/objects/AV_Simulador__c/fields/AV_Color__c.field-meta.xml
<CustomField>
    <fullName>AV_Color__c</fullName>
    <description>Campo para almacenar el color del botón en formato hexadecimal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>