force-app/main/default/objects/AV_Simulador__c/fields/AV_Fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>AV_Fecha_fin__c</fullName>
    <description>Fecha hasta la cual estará visible el visualizador</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha fin</label>
    <type>Date</type>
</CustomField>