force-app/main/default/objects/AV_Simulador__c/fields/AV_Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>AV_Fecha_Inicio__c</fullName>
    <description>Fecha a partir de la cual es visible el simulador</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha inicio</label>
    <type>Date</type>
</CustomField>