force-app/main/default/objects/AV_Simulador__c/fields/AV_Orden__c.field-meta.xml
<CustomField>
    <fullName>AV_Orden__c</fullName>
    <description>Campo utilizado para parametrizar el orden de los botones de simuladores en caso de que un producto tenga más de un simulador</description>
    <label>Orden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>