force-app/main/default/objects/AV_Simulador__c/fields/AV_PEA__c.field-meta.xml
<CustomField>
    <fullName>AV_PEA__c</fullName>
    <description>Utilizado para almacenar las PEAS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PEA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>