force-app/main/default/objects/AV_Simulador__c/fields/AV_Producto__c.field-meta.xml
<CustomField>
    <fullName>AV_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto relacionado con el simulador</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Simuladores</relationshipName>
    <type>Lookup</type>
</CustomField>