force-app/main/default/objects/AV_Simulador__c/fields/AV_URL__c.field-meta.xml
<CustomField>
    <fullName>AV_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>