force-app/main/default/objects/AV_Simulador__c/fields/AV_URL_PEA__c.field-meta.xml
<CustomField>
    <fullName>AV_URL_PEA__c</fullName>
    <label>URL/PEA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>PEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>